--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
-
 .app-wrapper {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    height: 100vh;
+    grid-template-areas:
+    "header"
+    "content";
 }
 
 .home-bg {
-    height: 100vh;
-    width: 100vw;
-    background-image: url("src/assets/home/background-home-desktop.jpg");
+    grid-area: background;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("src/assets/home/background-home-desktop.jpg") no-repeat center center;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    z-index: 1;
 }
 
 .home-wrapper {
+    grid-area: content;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    grid-template-areas:
+    "main"
+    "background";
 }
