--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,3 +1,57 @@
-.home{
+.home {
+    position: relative;
+    grid-area: main;
+    margin: auto 165px 131px 165px;
+    height: 382px;
+    display: grid;
+    grid-template-columns: 450px 1fr;
+    z-index: 2;
+    justify-items: center;
+}
 
+.homeText{
+    display: grid;
+    place-items: start;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    gap: 1rem;
+}
+
+.homeBtn{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.btn{
+    background-color: #FFFFFF;
+    height: 274px;
+    width: 274px;
+    color: #0B0D17;
+    padding: 20px 40px;
+    border-radius: 140px;
+    border: none;
+    font-size: 32px;
+    font-family: "Bellefair", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h1 {
+    font-size: 150px;
+    font-family: "Bellefair", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h2 {
+    font-size: 28px;
+    font-weight: normal;
+    letter-spacing: 4.72px;
+    color: #D0D6F9;
+}
+
+p {
+    font-size: 18px;
+    color: #D0D6F9;
 }
