--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
     grid-template-rows: auto 1fr;
     height: 100vh;
     grid-template-areas:
-    "header"
-    "content";
+        'header'
+        'content';
 }
 
 .home-bg {
@@ -14,7 +14,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("src/assets/home/background-home-desktop.jpg") no-repeat center center;
+    background: url('src/assets/home/background-home-desktop.jpg') no-repeat
+        center center;
     background-size: cover;
     z-index: 1;
 }
@@ -24,6 +25,6 @@
     display: grid;
     grid-template-rows: 1fr auto;
     grid-template-areas:
-    "main"
-    "background";
+        'main'
+        'background';
 }
